--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
+  - windows
   - linux
+  - osx
 julia:
-  - 0.7
-  - 1.0
+  - 1
+  - 1.3
   - nightly
+matrix:
+  allow_failures:
+  - julia: nightly
 notifications:
   email: false
 # uncomment the following lines to override the default test script
